# Show-Player-In-Inventory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
API/: APIManager.cpp  APIManager.h
include/: EventProcessor.h  MenuCamera.h  PCH.h  Settings.h  SettingsUI.h  VanillaBlurBlocker.h  logger.h
package/Data/SKSE/Plugins/: ShowPlayerInInventory.ini
src/: EventProcessor.cpp  MenuCamera.cpp  Settings.cpp  SettingsUI.cpp  VanillaBlurBlocker.cpp  plugin.cpp
